--- a/website1/index.html
+++ b/website1/index.html
@@ -288,9 +288,134 @@
                         </p>
                     </div>
                 </div>
+                <div class="blog">
+                    <img src="img/blog1.jpg" alt="">
+                    <div class="blog-text">
+                        <h4>How to Create Your Own Website</h4>
+                        <p>
+                            testing testing testing testing
+                        </p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="img/blog1.jpg" alt="">
+                    <div class="blog-text">
+                        <h4>How to Create Your Own Website</h4>
+                        <p>
+                            testing testing testing testing
+                        </p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="img/blog1.jpg" alt="">
+                    <div class="blog-text">
+                        <h4>How to Create Your Own Website</h4>
+                        <p>
+                            testing testing testing testing
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
-        <section class="section sec5" id="contact"></section>
+        <section class="section sec5" id="contact">
+            <div class="main-title">
+                <h2>
+                    My <span>Contact</span> <span class="bg-text">Contact Me</span>
+                </h2>
+            </div>
+            <div class="contact-container">
+                <div class="left-contact">
+                    <h4>Contact me here</h4>
+                    <p>
+                        Phone: +6013 - 5836 818
+                        test teset test testeststset s 
+                    </p>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>Location</span>
+                            </div>
+                            <p>
+                                : Petaling Jaya, Selangor, Malaysia.
+                            </p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fas fa-envelope"></i>
+                                <span>Email</span>
+                            </div>
+                            <p>
+                                : chiahsing.chong@outlook.com
+                            </p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fas fa-user-graduate"></i>
+                                <span>Education</span>
+                            </div>
+                            <p>
+                                : BSc at Universiti Tunku Abdul Rahman (UTAR), MCSc at Universiti Malaya (UM).
+                            </p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fas fa-phone"></i>
+                                <span>Mobile Number</span>
+                            </div>
+                            <p>
+                                : +60 13 - 5836 818
+                            </p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fas fa-language"></i>
+                                <span>Languages</span>
+                            </div>
+                            <p>
+                                : English, Chinese (Mandarin, Cantonese), Malay.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="contact-icons">
+                        <div class="contact-icon">
+                            <a href="www.facebook.com" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="www.twitter.com" target="_blank">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="www.github.com" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="www.youtube.com" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-contact">
+                    <form action="" class="contact-form">
+                        <div class="input-control icStyle1">
+                            <input type="text" required placeholder="YOUR NAME">
+                            <input type="email" required placeholder="YOUR EMAIL">
+                        </div>
+                        <div class="input-control">
+                            <input type="text" required placeholder="ENTER SUBJECT">
+                        </div>
+                        <div class="input-control">
+                            <textarea name="" id="" cols="15" rows="8" placeholder="Message here..."></textarea>
+                        </div>
+                        <div class="submit-btn">
+                            <a href="#" class="main-btn">
+                                <span class="btn-text">Download CV</span>
+                                <span class="btn-icon"><i class="fas fa-download"></i></span>
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="controls">
