--- a/website1/index.html
+++ b/website1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Justin CCH CV/Resume</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -379,17 +379,20 @@
                     </div>
                     <div class="contact-icons">
                         <div class="contact-icon">
-                            <a href="www.facebook.com" target="_blank">
+                            <a href="https://www.facebook.com/chc5679" target="_blank">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="www.twitter.com" target="_blank">
+                            <a href="https://www.twitter.com/justinchongch" target="_blank">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="www.github.com" target="_blank">
+                            <a href="https://www.github.com/cchsing" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="www.youtube.com" target="_blank">
+                            <a href="https://www.youtube.com" target="_blank">
                                 <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/chchong5679" target="_blank">
+                                <i class="fab fa-linkedin"></i>
                             </a>
                         </div>
                     </div>
@@ -434,6 +437,10 @@
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
+    </div>
+
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
     </div>
 
     <script src="app.js"></script>
