--- a/website1/index.html
+++ b/website1/index.html
@@ -34,7 +34,7 @@
                     for PLC and SCADA programming in industrial automation by being a project developer, deployer, and tester. 
                 </p>
                 <div class="btn-cont">
-                    <a href="" class="main-btn">
+                    <a href="./resources/Resume-ChongChiaHsing-V1.1.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
